# ged_io

./: Cargo.toml  MIGRATION.md  README.md  ROADMAP.md
.cargo/: config.toml
.github/workflows/: ci-build.yml  ci.yml  release.yml
benches/: memory.rs  parsing.rs  tokenizer.rs
docs/: README.md
examples/: cow_usage.rs
fuzz/: Cargo.toml  README.md
fuzz/dict/: gedcom.dict
fuzz/fuzz_targets/: date_qualifier.rs  detect_encoding.rs  detect_version.rs  encode_decode_roundtrip.rs  escape_at_roundtrip.rs  gedzip_read.rs  name_parse.rs  parse_bytes.rs  parse_str.rs  stream_parser.rs  writer_roundtrip.rs
src/: bin.rs  builder.rs  debug.rs  display.rs  encoding.rs  error.rs  indexed.rs  lib.rs  parser.rs  stream.rs  tokenizer.rs  types.rs  util.rs  writer.rs
src/types/: address.rs  age.rs  corporation.rs  custom.rs  date.rs  event.rs  family.rs  gedcom7.rs  header.rs  individual.rs  lds.rs  multimedia.rs  note.rs  place.rs  repository.rs  shared_note.rs  source.rs  submission.rs  submitter.rs  translation.rs
src/types/date/: calendar.rs  change_date.rs
src/types/event/: detail.rs  family.rs
src/types/header/: encoding.rs  meta.rs  place.rs  schema.rs  source.rs
src/types/header/source/: data.rs
src/types/individual/: association.rs  family_link.rs  gedcom_name.rs  gender.rs  name.rs
src/types/individual/attribute/: detail.rs
src/types/multimedia/: file.rs  format.rs  link.rs  user.rs
src/types/repository/: citation.rs
src/types/source/: citation.rs  quay.rs  text.rs
src/types/source/citation/: data.rs
tests/: backward_compatibility.rs  cli_validate.rs  common.rs  convenience_methods.rs  encoding.rs  gedcom_5.rs  gedcom_7.rs  json_feature.rs  lib.rs  round_trip.rs
tests/fixtures/: juesce.ged
