[package]
name = "ged_io"
version = "0.12.3"
authors = [
    "Robert Pirtle <astropirtle@gmail.com>",
    "Jacob Benison <ge3224@gmail.com>",
    "Pierre Erraud <trois.six+github@ik.me>",
]
description = "A parser for GEDCOM files"
keywords = ["genealogy", "gedcom", "parser", "family-trees"]
categories = ["parser-implementations", "data-structures"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ge3224/ged_io"
edition = "2021"
include = ["Cargo.toml", "src/**/*.rs"]

[features]
default = []
json = ["serde", "serde_json"]
gedzip = ["zip"]
calendar = ["chrono", "calendrical_calculations", "calendrier"]

[dependencies]
encoding_rs = "0.8"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
zip = { version = "2.2", optional = true, default-features = false, features = ["deflate"] }
chrono = { version = "0.4", optional = true }
calendrical_calculations = { version = "0.2", optional = true }
calendrier = { version = "1.0", optional = true, features = ["chrono"] }

[dev-dependencies]
serde_test = "1.0.123"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "parsing"
harness = false

[[bench]]
name = "tokenizer"
harness = false

[[bench]]
name = "memory"
harness = false

[lib]
name = "ged_io"
path = "src/lib.rs"

[[bin]]
name = "ged_io"
path = "src/bin.rs"
